--- a/src/output-biomass.csproj
+++ b/src/output-biomass.csproj
@@ -23,6 +23,10 @@
     <PackageLicenseUrl>https://github.com/LANDIS-II-Foundation/Extension-Output-Biomass-Reclass/blob/master/LICENSE</PackageLicenseUrl>
     <PackageProjectUrl>http://www.landis-ii.org</PackageProjectUrl>
     <PackageReleaseNotes>.NET Standard 2.0 update</PackageReleaseNotes>
+    <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <OutputPath>..\..\build\extensions</OutputPath>
   </PropertyGroup>
 
   <ItemGroup>
